2014-08-09  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Minor optimization.

	Callgrind says brk_recover_try() is the most frequently called.
	So, try to optimize it as we can.

	* src/thbrk/brk-maximal.c (brk_recover, brk_recover_try):
	  - Only return the last break position instead of all.
	* src/thbrk/brk-maximal.c (brk_recover_try):
	  - Remove unneeded assignment on is_terminal for the case in which
	    its value is irrelevant.
	  - Remove unneeded check on is_terminal where its value is known.

2014-08-09  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* src/thbrk/brk-maximal.c:
	  - Add missing #include <limits.h>.

2014-08-05  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Code clean up.

	* src/thbrk/brk-maximal.c (brk_shot_init):
	  - Split assignment and if-condition.
	* src/thbrk/brk-maximal.c (brk_pool_free_node -> brk_pool_node_free):
	  - Rename the function to obj-action form, in accordance with
	    brk_pool_node_new().
	  - Add forward declaration for it.

2014-08-04  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Refactor common thbrk code into brk-common.

	This prevents mutual dependency between brk-* and thbrk.

	* src/thbrk/Makefile.am:
	* src/thbrk/thbrk-private.h -> src/thbrk/brk-common.h:
	  - Rename file, as thbrk-private.h contains only functions for
	    common brk-* codes.
	  - Rename thbrk_* functions back to brk_*.
	* src/thbrk/Makefile.am:
	* src/thbrk/thbrk.c:
	* +src/thbrk/brk-common.c:
	  - Move common thbrk_* functions implementations to brk-common.c.
	  - Rename the functions according to changes in brk-common.h.
	* src/thbrk/brk-maximal.c:
	  - Update #include for thbrk-private.h to brk-common.h.
	  - Update calls to thbrk_* to brk_*.
	  - Remove #include's previously used by the common code.
	* src/libthai.c (_libthai_on_unload):
	  - Update #include for thbrk-private.h to brk-common.h.
	  - Update call to thbrk_on_unload() to brk_on_unload().

2014-08-03  Theppitak Karoonboonyanan  <theppitak@gmail.com>
